--- a/Maths/Maths.html
+++ b/Maths/Maths.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DSA-Array</title>
+    <title>DSA-Maths</title>
   </head>
   <body>
-    <script src="array.js"></script>
+    <script src="Maths.js"></script>
   </body>
 </html>
